--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-# Object file
-*.o
-
-# Ada Library Information
-*.ali
+__pycache__/
+.DS_Store
+.env
+*.pyc
+*.pyo
+venv/
+venv*
+dist/
+build/
+.tox/
+.cache/
+.pytest_cache/
+.idea/
+docs/_build/
+public/uploads/images
+public/uploads/quotation
+migrations/
+logs/
